# yage

./: .dprint.json  .earthlyignore  .pre-commit-hooks.yaml  Cargo.toml  Earthfile  LICENSE  README.md  build.rs
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot.yml  docker.yml  release.yml
.helix/: languages.toml
doc/: CommandLineHelp.md  yage.1
docker/: from.sh  target.sh
docs/: CommandLineHelp.md
src/: cli.rs  decrypt.rs  edit.rs  encrypt.rs  env.rs  error.rs  keygen.rs  lib.rs  main.rs  pubkey.rs  util.rs
src/cmd/: check.rs  decrypt.rs  edit.rs  encrypt.rs  env.rs  keygen.rs  pubkey.rs  re_encrypt.rs  recipients.rs  status.rs
tests/: check.rs  cli.rs  common.rs  decrypt.rs  edit.rs  encrypt.rs  env.rs  keygen.rs  pubkey.rs  re_encrypt.rs  recipients.rs  regression.rs  tests.rs  tests_cli.rs
tests/common/: mod.rs
tests/fixtures/: encrypted_simple.yaml  identity.age  identity.age.pub  plaintext_simple.yaml  with_comments.yaml
xtask/: Cargo.toml
