[package]
name = "yage"
version = "0.5.0"
edition = "2021"
authors = ["Gaëtan Lehmann <gaetan.lehmann@gmail.com>"]
description = "A simple tool to manage encrypted secrets in YAML files with age encryption"
readme = "README.md"
repository = "https://github.com/glehmann/yage.git"
homepage = "https://github.com/glehmann/yaqe/"
documentation = "https://github.com/glehmann/yaqe/"
license = "MIT"
keywords = ["secret", "yaml", "encryption", "cli", "age"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["xtask"]

[dependencies]
age = "0.10.0"
base64 = "0.21.7"
clap = { version = "4.4.18", features = ["derive", "env", "wrap_help"] }
clap-verbosity-flag = "2.1.2"
clap_complete = "4.4.10"
flate2 = "1.0.28"
fs-mistrust = "0.7.6"
hlight = "0.0.1"
log = "0.4.20"
ocli = "0.1.1"
serde_yaml = "0.9.32"
shlex = "1.3.0"
strum = { version = "0.26.1", features = ["derive"] }
substring = "1.4.5"
tempfile = "3.9.0"
thiserror = "1.0.56"
treediff = { version = "4.0.3", features = ["with-serde-yaml"] }

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1"
assert_fs = "1.1"
lipsum = "0.9"
escargot = "0.5"
predicates-tree = "1.0.9"
uuid = { version = "1.7.0", features = ["v4"] }
pretty_assertions = "1.4.0"

[profile.release]
strip = "symbols"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
