[package]
name = "yage"
version = "0.5.0"
edition = "2021"
authors = ["Gaëtan Lehmann <gaetan.lehmann@gmail.com>"]
description = "A simple tool to manage encrypted secrets in YAML files with age encryption"
readme = "README.md"
repository = "https://github.com/glehmann/yage.git"
homepage = "https://github.com/glehmann/yage/"
documentation = "https://github.com/glehmann/yage/"
license = "MIT"
keywords = ["secret", "yaml", "encryption", "cli", "age"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["xtask"]

[dependencies]
age = "0.10.1"
base64 = "0.22.1"
clap = { version = "4.5.13", features = ["derive", "env", "wrap_help"] }
clap-verbosity-flag = "3.0.4"
clap_complete = "4.5.13"
flate2 = "1.1.2"
fs-mistrust = "0.11.0"
log = "0.4.27"
ocli = "0.2.1"
serde_yaml = "0.9.33"
shlex = "1.3.0"
strum = { version = "0.27.2", features = ["derive"] }
substring = "1.4.5"
tempfile = "3.21.0"
thiserror = "2.0.16"
treediff = { version = "5.0.0", features = ["with-serde-yaml"] }

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1"
assert_fs = "1.1"
lipsum = "0.9"
escargot = "0.5"
predicates-tree = "1.0.12"
uuid = { version = "1.18.0", features = ["v4"] }
pretty_assertions = "1.4.1"

[profile.release]
strip = "symbols"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
