[package]
name = "xtask"
version = "0.4.0"
edition = "2021"
authors = ["Gaëtan Lehmann <gaetan.lehmann@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yage = { path=".." }
clap = { version = "4.5.4", features = ["derive", "env", "wrap_help"] }
clap-markdown = "0.1.3"
clap_mangen = "0.2.18"
